# eurorack

./: README.md
BinarySequencer/: Bank.cpp  Bank.h  BinarySequencer.ino  Button.cpp  Button.h  Input.cpp  Input.h  Output.cpp  Output.h  Step.cpp  Step.h  build.sh
Crunch/: README.md
Outs/: README.md  panel.blend  panel.blend1
Outs/VeroBoard/: outs_vero.diy
PSU/: README.md
QPython/: Button.py  DAC.py  Encoder.py  Input.py  main.py
Snare/: README.md  main.ino
TNGF_Baby8/: README.md
midi_in/: README.md
midi_in/cpp/: CMakeLists.txt  build.sh  main.c
midi_in/python/: main.py
